completely renovate website design

--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,6 @@
       href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" type="text/css" href="portfolionormalize.css" />
     <link rel="stylesheet" type="text/css" href="portfoliogrid.css" />
     <link rel="stylesheet" type="text/css" href="portfolio.css" />
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -23,7 +22,8 @@
         </div>
       </nav>
       <div class="hero-text-box">
-        <h1>Hi. My name's Jesse and I am a software engineer.</h1>
+        <h1>Jesse McMahon</h1>
+        <h3 class="hero-title">Software Engineer</h3>
         <a class="btn btn-full" href="#">Learn more</a>
         <a class="btn btn-ghost" href="#">My work</a>
       </div>
@@ -31,29 +31,29 @@
 
     <section id="about-me" class="section-skills">
       <div class="row">
-        <h2>What I can do for you...</h2>
+        <h2>A little about me...</h2>
         <p class="long-copy">
-          I am a full-stack web developer. This means that I can handle all of
-          your web development needs from front-end to back-end and everything
-          in between. I can also help you with registering for a domain and
-          web-hosting services. Below are just some of the technologies that I
-          have experience in.
+          My name is Jesse and I am a Software Engineer based out of New Jersey.
+          I really enjoy the creative process of taking something from a simple
+          idea to reality. I am currently working in React but love learning new
+          technologies and ways to build things. Below are just some of the
+          technologies that I have expreience with!
         </p>
       </div>
       <div class="row">
-        <div class="col span-1-of-3 box">
+        <div class="col skills span-1-of-3 box">
           <ion-icon
             class="large-icon javascript"
             name="logo-javascript"
           ></ion-icon>
-          <h3>Javascript</h3>
+          <h3>Javascript (including ReactJS)</h3>
           <p class="description">
             Build more than just a static website. Javascript can take your
             website to the next level by adding dynamic features. This allows
             users to have a more memorable experience.
           </p>
         </div>
-        <div class="col span-1-of-3 box">
+        <div class="col skills span-1-of-3 box">
           <ion-icon class="large-icon html" name="logo-html5"></ion-icon>
           <h3>HTML5</h3>
           <p class="description">
@@ -61,7 +61,7 @@
             technologies.
           </p>
         </div>
-        <div class="col span-1-of-3 box">
+        <div class="col skills span-1-of-3 box">
           <ion-icon class="large-icon css" name="logo-css3"></ion-icon>
           <h3>CSS3</h3>
           <p class="description">
@@ -71,7 +71,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col span-1-of-2 box">
+        <div class="col skills span-1-of-2 box">
           <ion-icon class="large-icon mongodb" name="leaf"></ion-icon>
           <h3>MONGODB</h3>
           <p class="description">
@@ -79,7 +79,7 @@
             websites needs.
           </p>
         </div>
-        <div class="col span-1-of-2 box">
+        <div class="col skills span-1-of-2 box">
           <ion-icon class="large-icon node" name="logo-nodejs"></ion-icon>
           <h3>NODE JS</h3>
           <p class="description">
@@ -92,7 +92,64 @@
     </section>
 
     <section id="my-work" class="section-work">
-      <h1>MY WORK GOES HERE</h1>
+      <h1>My Work</h1>
+      <div class="card-box">
+        <div class="imgBx">
+          <img
+            src="https://images.unsplash.com/photo-1501854140801-50d01698950b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1440&q=80"
+          />
+        </div>
+        <div class="content">
+          <h3>Bettor Together</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      <div class="card-box">
+        <div class="imgBx">
+          <img
+            src="https://images.unsplash.com/photo-1518495973542-4542c06a5843?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+          />
+        </div>
+        <div class="content">
+          <h3>Gravity Maze</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
+      <div class="card-box">
+        <div class="imgBx">
+          <img
+            src="https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
+          />
+        </div>
+        <div class="content">
+          <h3>OmniFood</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </div>
     </section>
 
     <section class="section-process">
@@ -106,7 +163,7 @@
         </p>
       </div>
       <div class="row">
-        <div class="col span-1-of-4">
+        <div class="col process span-1-of-4">
           <ion-icon class="process-icon" name="bulb"></ion-icon>
           <h3>Have an idea</h3>
           <p class="description">
@@ -116,7 +173,7 @@
             life.
           </p>
         </div>
-        <div class="col span-1-of-4">
+        <div class="col process span-1-of-4">
           <ion-icon class="process-icon" name="person-add"></ion-icon>
           <h3>Choose a developer</h3>
           <p class="description">
@@ -126,7 +183,7 @@
             moving forward.
           </p>
         </div>
-        <div class="col span-1-of-4">
+        <div class="col process span-1-of-4">
           <ion-icon class="process-icon" name="construct"></ion-icon>
           <h3>Create</h3>
           <p class="description">
@@ -135,7 +192,7 @@
             you regularly and making changes based on your feedback.
           </p>
         </div>
-        <div class="col span-1-of-4">
+        <div class="col process span-1-of-4">
           <ion-icon class="process-icon" name="clipboard"></ion-icon>
           <h3>Review and rejoice</h3>
           <p class="description">
@@ -158,23 +215,13 @@
           <div class="col span-1-of-2">
             <ul class="social-links">
               <li>
-                <a href="#"
+                <a href="https://github.com/JesseMcMahon"
                   ><ion-icon class="github" name="logo-github"></ion-icon
                 ></a>
               </li>
               <li>
-                <a href="#"
-                  ><ion-icon class="twitter" name="logo-twitter"></ion-icon
-                ></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><ion-icon class="google" name="logo-googleplus"></ion-icon
-                ></a>
-              </li>
-              <li>
-                <a href="#"
-                  ><ion-icon class="instagram" name="logo-instagram"></ion-icon
+                <a href="www.linkedin.com/jessedmcmahon"
+                  ><ion-icon class="linkedin" name="logo-linkedin"></ion-icon
                 ></a>
               </li>
             </ul>
