update project cards

--- a/index.html
+++ b/index.html
@@ -102,14 +102,16 @@
         <div class="content">
           <h3>Bettor Together</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            A real-time chat application that pulls sporting event data from an
+            API and creates joinable chat rooms for each specific event.
           </p>
+          <ul class="built-with-list">
+            <li class="built-with-list-item">React</li>
+            <li class="built-with-list-item">Javascript</li>
+            <li class="built-with-list-item">CSS3</li>
+            <li class="built-with-list-item">HTML</li>
+            <li class="built-with-list-item">Socket.io</li>
+          </ul>
         </div>
       </div>
       <div class="card-box">
@@ -121,14 +123,15 @@
         <div class="content">
           <h3>Gravity Maze</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            Playable game that utilized algorithms to generate a random,
+            completable maze upon each render.
           </p>
+          <ul class="built-with-list">
+            <li class="built-with-list-item">HTML5</li>
+            <li class="built-with-list-item">CSS3</li>
+            <li class="built-with-list-item">Javascript</li>
+            <li class="built-with-list-item">Matter.js</li>
+          </ul>
         </div>
       </div>
       <div class="card-box">
@@ -140,14 +143,13 @@
         <div class="content">
           <h3>OmniFood</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
+            Website for a fake meal-delivery-service that I built to practice
+            Responsive Web Design as well as HTML5 & CSS3
           </p>
+          <ul class="built-with-list">
+            <li class="built-with-list-item">HTML5</li>
+            <li class="built-with-list-item">CSS3</li>
+          </ul>
         </div>
       </div>
     </section>
