change project card images

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <div class="hero-text-box">
         <h1>Jesse McMahon</h1>
         <h3 class="hero-title">Software Engineer</h3>
-        <a class="btn btn-full" href="#">Learn more</a>
+        <a class="btn btn-full" href="https://github.com/JesseMcMahon"
+          >My Github</a
+        >
         <a class="btn btn-ghost" href="#">My work</a>
       </div>
     </header>
@@ -95,9 +97,7 @@
       <h1>My Work</h1>
       <div class="card-box">
         <div class="imgBx">
-          <img
-            src="https://images.unsplash.com/photo-1501854140801-50d01698950b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1440&q=80"
-          />
+          <img class="project-image" src="BettorTogether.png" />
         </div>
         <div class="content">
           <h3>Bettor Together</h3>
@@ -109,16 +109,18 @@
             <li class="built-with-list-item">React</li>
             <li class="built-with-list-item">Javascript</li>
             <li class="built-with-list-item">CSS3</li>
-            <li class="built-with-list-item">HTML</li>
             <li class="built-with-list-item">Socket.io</li>
           </ul>
+          <a
+            class="github-repo"
+            href="https://github.com/JesseMcMahon/bettortogether"
+            ><ion-icon class="github" name="logo-github"></ion-icon
+          ></a>
         </div>
       </div>
       <div class="card-box">
         <div class="imgBx">
-          <img
-            src="https://images.unsplash.com/photo-1518495973542-4542c06a5843?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
-          />
+          <img class="project-image" src="MazeGame.png" />
         </div>
         <div class="content">
           <h3>Gravity Maze</h3>
@@ -132,13 +134,14 @@
             <li class="built-with-list-item">Javascript</li>
             <li class="built-with-list-item">Matter.js</li>
           </ul>
+          <a class="github-repo" href="https://github.com/JesseMcMahon/mazegame"
+            ><ion-icon class="github" name="logo-github"></ion-icon
+          ></a>
         </div>
       </div>
       <div class="card-box">
         <div class="imgBx">
-          <img
-            src="https://images.unsplash.com/photo-1447752875215-b2761acb3c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"
-          />
+          <img class="project-image" src="omnifoodpic.png" />
         </div>
         <div class="content">
           <h3>OmniFood</h3>
@@ -150,6 +153,9 @@
             <li class="built-with-list-item">HTML5</li>
             <li class="built-with-list-item">CSS3</li>
           </ul>
+          <a class="github-repo" href="https://github.com/JesseMcMahon/omnifood"
+            ><ion-icon class="github" name="logo-github"></ion-icon
+          ></a>
         </div>
       </div>
     </section>
@@ -222,7 +228,7 @@
                 ></a>
               </li>
               <li>
-                <a href="www.linkedin.com/jessedmcmahon"
+                <a href="https://www.linkedin.com/in/jesse-mcmahon/"
                   ><ion-icon class="linkedin" name="logo-linkedin"></ion-icon
                 ></a>
               </li>
