fix my work button

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="btn btn-full" href="https://github.com/JesseMcMahon"
           >My Github</a
         >
-        <a class="btn btn-ghost" href="#">My work</a>
+        <a class="btn btn-ghost" href="#my-work">My work</a>
       </div>
     </header>
 
@@ -125,7 +125,7 @@
         <div class="content">
           <h3>Gravity Maze</h3>
           <p>
-            Playable game that utilized algorithms to generate a random,
+            Playable game that utilizes algorithms to generate a random,
             completable maze upon each render.
           </p>
           <ul class="built-with-list">
