make cards responsive

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <section id="my-work" class="section-work">
       <h1>My Work</h1>
-      <div class="card-box">
+      <div class="card-box projects">
         <div class="imgBx">
           <img class="project-image" src="BettorTogether.png" />
         </div>
@@ -118,7 +118,7 @@
           ></a>
         </div>
       </div>
-      <div class="card-box">
+      <div class="card-box projects">
         <div class="imgBx">
           <img class="project-image" src="MazeGame.png" />
         </div>
@@ -139,7 +139,7 @@
           ></a>
         </div>
       </div>
-      <div class="card-box">
+      <div class="card-box projects">
         <div class="imgBx">
           <img class="project-image" src="omnifoodpic.png" />
         </div>
@@ -161,7 +161,7 @@
     </section>
 
     <section class="section-process">
-      <div class="row">
+      <div class=" how-it-works row">
         <h2>How it works.</h2>
         <p class="long-copy">
           Hiring a web developer can be confusing. There are so many different
