--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
       <div class="hero-text-box">
         <h1>Jesse McMahon</h1>
-        <h3 class="hero-title">Software Engineer</h3>
+        <h3 class="hero-title">Software Developer</h3>
         <a class="btn btn-full" href="https://github.com/JesseMcMahon"
           >My Github</a
         >
@@ -35,11 +35,11 @@
       <div class="row">
         <h2>A little about me...</h2>
         <p class="long-copy">
-          My name is Jesse and I am a Software Engineer based out of New Jersey.
-          I really enjoy the creative process of taking something from a simple
-          idea to reality. I am currently working in React but love learning new
-          technologies and ways to build things. Below are just some of the
-          technologies that I have expreience with!
+          My name is Jesse and I am a Software Developer based out of New
+          Jersey. I really enjoy the creative process of taking something from a
+          simple idea to reality. I am currently working in React but love
+          learning new technologies and ways to build things. Below are just
+          some of the technologies that I have expreience with!
         </p>
       </div>
       <div class="row">
@@ -103,7 +103,8 @@
           <h3>Bettor Together</h3>
           <p>
             A real-time chat application that pulls sporting event data from an
-            API and creates joinable chat rooms for each specific event.
+            API and creates joinable chat rooms for each specific event. Made
+            for sports bettors that want people to talk with.
           </p>
           <ul class="built-with-list">
             <li class="built-with-list-item">React</li>
