--- a/index.html
+++ b/index.html
@@ -142,17 +142,18 @@
       </div>
       <div class="card-box projects">
         <div class="imgBx">
-          <img class="project-image" src="omnifoodpic.png" />
+          <img class="project-image" src="NFLStadiumMap.png" />
         </div>
         <div class="content">
-          <h3>OmniFood</h3>
+          <h3>NFL Stadium Map</h3>
           <p>
-            Website for a fake meal-delivery-service that I built to practice
-            Responsive Web Design as well as HTML5 & CSS3
+            Interactive map that utilizes the Google Maps API to display
+            locations of all NFL stadiums as well as a little bit of information
+            about each stadium.
           </p>
           <ul class="built-with-list">
-            <li class="built-with-list-item">HTML5</li>
-            <li class="built-with-list-item">CSS3</li>
+            <li class="built-with-list-item">React</li>
+            <li class="built-with-list-item">Google Maps API</li>
           </ul>
           <a class="github-repo" href="https://github.com/JesseMcMahon/omnifood"
             ><ion-icon class="github" name="logo-github"></ion-icon
