update github page for maze

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <li class="built-with-list-item">Javascript</li>
             <li class="built-with-list-item">Matter.js</li>
           </ul>
-          <a class="github-repo" href="https://github.com/JesseMcMahon/mazegame"
+          <a class="github-repo" href="https://jessemcmahon.github.io/mazegame/"
             ><ion-icon class="github" name="logo-github"></ion-icon
           ></a>
         </div>
