fix href for Stadium Map

--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
             <li class="built-with-list-item">React</li>
             <li class="built-with-list-item">Google Maps API</li>
           </ul>
-          <a class="github-repo" href="https://github.com/JesseMcMahon/omnifood"
+          <a
+            class="github-repo"
+            href="https://github.com/JesseMcMahon/stadiummap"
             ><ion-icon class="github" name="logo-github"></ion-icon
           ></a>
         </div>
