--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             class="large-icon javascript"
             name="logo-javascript"
           ></ion-icon>
-          <h3>Javascript (including ReactJS)</h3>
+          <h3>Javascript (including React)</h3>
           <p class="description">
             Build more than just a static website. Javascript can take your
             website to the next level by adding dynamic features. This allows
