change app name

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <img class="project-image" src="BettorTogether.png" />
         </div>
         <div class="content">
-          <h3>Bettor Together</h3>
+          <h3>Gambling Chat App</h3>
           <p>
             A real-time chat application that pulls sporting event data from an
             API and creates joinable chat rooms for each specific event. Made
