change about me

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
       <div class="row">
         <h2>A little about me...</h2>
         <p class="long-copy">
-          My name is Jesse and I am a Software Developer based out of New
-          Jersey. I really enjoy the creative process of taking something from a
-          simple idea to reality. I am currently working in React but love
-          learning new technologies and ways to build things. Below are just
-          some of the technologies that I have expreience with!
+          I am a Software Developer with a strong passion for the field. I also
+          have a deep passion for learning new things. In the world of software
+          development things are constantly changing. This means that new
+          obstacles and challenges arrive every day and I think it is imperative
+          to continue learning if you want to be successful in this field. Below
+          are some of the technologies that I have expreience with so far!
         </p>
       </div>
       <div class="row">
@@ -49,7 +50,7 @@
             class="large-icon javascript"
             name="logo-javascript"
           ></ion-icon>
-          <h3>Javascript (including React)</h3>
+          <h3>Javascript/React</h3>
           <p class="description">
             Build more than just a static website. Javascript can take your
             website to the next level by adding dynamic features. This allows
