--- a/index.html
+++ b/index.html
@@ -99,24 +99,24 @@
       <h1>My Work</h1>
       <div class="card-box projects">
         <div class="imgBx">
-          <img class="project-image" src="BettorTogether.png" />
+          <img src="stock.png" />
         </div>
         <div class="content">
-          <h3>Gambling Chat App</h3>
+          <h3>Stock Chart App</h3>
           <p>
-            A real-time chat application that pulls sporting event data from an
-            API and creates joinable chat rooms for each specific event. Made
-            for sports bettors that want people to talk with.
+            An app that utilizes multiple API calls to obtain data regarding a
+            stock that the user searches for. The app displays a dynamic price
+            chart as well as a "Company Snapshot" with information about the
+            company specified by the user
           </p>
           <ul class="built-with-list">
             <li class="built-with-list-item">React</li>
-            <li class="built-with-list-item">Javascript</li>
             <li class="built-with-list-item">CSS3</li>
-            <li class="built-with-list-item">Socket.io</li>
+            <li class="built-with-list-item">Plotly.JS</li>
           </ul>
           <a
             class="github-repo"
-            href="https://github.com/JesseMcMahon/bettortogether"
+            href="https://github.com/JesseMcMahon/stockchartapp"
             ><ion-icon class="github" name="logo-github"></ion-icon
           ></a>
         </div>
@@ -126,7 +126,7 @@
           <img class="project-image" src="MazeGame.png" />
         </div>
         <div class="content">
-          <h3>Gravity Maze</h3>
+          <h3>Maze Game</h3>
           <p>
             Playable game that utilizes algorithms to generate a random,
             completable maze upon each render.
