new project layout

--- a/index.html
+++ b/index.html
@@ -104,10 +104,11 @@
         <div class="content">
           <h3>Stock Chart App</h3>
           <p>
-            An app that utilizes multiple API calls to obtain data regarding a
-            stock that the user searches for. The app displays a dynamic price
-            chart as well as a "Company Snapshot" with information about the
-            company specified by the user
+            An app that searches multiple API's to obtain data regarding a stock
+            based on user input. The app displays a dynamic price chart as well
+            as a "Company Snapshot" with information about the company specified
+            by the user. The app also has a top news feature that updates
+            throughout the day with top news stories.
           </p>
           <ul class="built-with-list">
             <li class="built-with-list-item">React</li>
@@ -129,7 +130,9 @@
           <h3>Maze Game</h3>
           <p>
             Playable game that utilizes algorithms to generate a random,
-            completable maze upon each render.
+            completable maze. Users are prompted with directions upon each
+            render and each time they beat the game a new maze will be
+            generated.
           </p>
           <ul class="built-with-list">
             <li class="built-with-list-item">HTML5</li>
@@ -150,8 +153,9 @@
           <h3>NFL Stadium Map</h3>
           <p>
             Interactive map that utilizes the Google Maps API to display
-            locations of all NFL stadiums as well as a little bit of information
-            about each stadium.
+            locations of all NFL stadiums. The app also allows users to click on
+            each stadiums pin and shows an image and information about each
+            stadium.
           </p>
           <ul class="built-with-list">
             <li class="built-with-list-item">React</li>
