fix capitalization issue

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </div>
         <div class="col skills span-1-of-2 box">
           <ion-icon class="large-icon node" name="logo-nodejs"></ion-icon>
-          <h3>NODE JS/Express</h3>
+          <h3>NODE JS/EXPRESS</h3>
           <p class="description">
             Used to write the backend of your applications. NodeJS allows for
             writing Javascript on the server-side which leads to more clean,
