--- a/index.html
+++ b/index.html
@@ -101,6 +101,30 @@
       <h1>My Work</h1>
       <div class="card-box projects">
         <div class="imgBx">
+          <img class="project-image" src="NewsApp.png" />
+        </div>
+        <div class="content">
+          <h3>News App</h3>
+          <p>
+            Interactive map that utilizes the Google Maps API to display
+            locations of all NFL stadiums. The app also allows users to click on
+            each stadiums pin and shows an image and information about each
+            stadium.
+          </p>
+          <ul class="built-with-list">
+            <li class="built-with-list-item">React</li>
+            <li class="built-with-list-item">HTML</li>
+            <li class="built-with-list-item">CSS</li>
+          </ul>
+          <a
+            class="github-repo"
+            href="https://stupefied-heisenberg-0d6fde.netlify.com/"
+            ><ion-icon class="github" name="logo-github"></ion-icon
+          ></a>
+        </div>
+      </div>
+      <div class="card-box projects">
+        <div class="imgBx">
           <img src="stock.png" />
         </div>
         <div class="content">
@@ -143,29 +167,6 @@
             <li class="built-with-list-item">Matter.js</li>
           </ul>
           <a class="github-repo" href="https://jessemcmahon.github.io/mazegame/"
-            ><ion-icon class="github" name="logo-github"></ion-icon
-          ></a>
-        </div>
-      </div>
-      <div class="card-box projects">
-        <div class="imgBx">
-          <img class="project-image" src="NFLStadiumMap.png" />
-        </div>
-        <div class="content">
-          <h3>NFL Stadium Map</h3>
-          <p>
-            Interactive map that utilizes the Google Maps API to display
-            locations of all NFL stadiums. The app also allows users to click on
-            each stadiums pin and shows an image and information about each
-            stadium.
-          </p>
-          <ul class="built-with-list">
-            <li class="built-with-list-item">React</li>
-            <li class="built-with-list-item">Google Maps API</li>
-          </ul>
-          <a
-            class="github-repo"
-            href="https://github.com/JesseMcMahon/stadiummap"
             ><ion-icon class="github" name="logo-github"></ion-icon
           ></a>
         </div>
