--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div>
       <div class="card-box projects">
         <div class="imgBx">
-          <img src="stock.png" />
+          <img class="project-image" src="stock.png" />
         </div>
         <div class="content">
           <h3>Stock Chart App</h3>
