--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
         <div class="content">
           <h3>News App</h3>
           <p>
-            Interactive map that utilizes the Google Maps API to display
-            locations of all NFL stadiums. The app also allows users to click on
-            each stadiums pin and shows an image and information about each
-            stadium.
+            News website that utilizes the NewsAPI to retrieve news stories from
+            various news outlets based on user input.
           </p>
           <ul class="built-with-list">
             <li class="built-with-list-item">React</li>
